--- a/src/components/events/Events.css
+++ b/src/components/events/Events.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: lightgray;
+  background-color: lavender;
   margin-left: 20%;
   margin-right: 20%;
   margin-top: 40px;
