--- a/src/components/events/Events.css
+++ b/src/components/events/Events.css
@@ -16,3 +16,20 @@
   width: 50%;
   align-items: center;
 }
+
+.card {
+  background-color: lavender !important;
+  border: 1px solid black !important;
+  text-align: center;
+}
+
+.eventsCardGroup {
+  display: flex !important;
+  justify-content: center !important;
+}
+
+.eventsButton {
+  display: flex !important;
+  justify-content: center !important;
+  margin-bottom: 20px;
+}
