still working on some styling for event prominence

--- a/src/components/events/Events.css
+++ b/src/components/events/Events.css
@@ -1,4 +1,4 @@
-.prominent {
-  background-color: cornflowerblue;
-  font-weight: bolder
-}
+/* .prominent {
+  background-color: sandybrown
+
+} */
