--- a/src/components/tasks/TaskItem.css
+++ b/src/components/tasks/TaskItem.css
@@ -19,6 +19,15 @@
 
 .task {
   list-style-type: none;
-  padding: 8px;
+  padding-top: 8px;
+  /* margin: 5px; */
+}
+
+.listP {
+  padding: 5px;
+  color: #666666;
+}
+
+.checkboi {
   margin: 5px;
 }
