--- a/src/components/events/Events.css
+++ b/src/components/events/Events.css
@@ -17,7 +17,7 @@
   align-items: center;
 }
 
-.card {
+.eventsCard {
   background-color: lavender !important;
   border: 1px solid black !important;
   text-align: center;
@@ -32,4 +32,9 @@
   display: flex !important;
   justify-content: center !important;
   margin: 20px;
+}
+
+.prominent {
+  background-color: purple !important;
+  color: white !important;
 }
