--- a/src/components/tasks/TaskItem.css
+++ b/src/components/tasks/TaskItem.css
@@ -16,3 +16,20 @@
 .visible {
   visibility: visible;
 }
+
+.taskContainer {
+  display: flex;
+  background-color: lavender;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  margin: 5%;
+  border: 2px solid black;
+  padding: 30px;
+  border-radius: 10px
+}
+
+.taskHeader {
+  text-align: center;
+  
+}
