--- a/src/components/tasks/TaskItem.css
+++ b/src/components/tasks/TaskItem.css
@@ -1,7 +1,7 @@
 .checked {
-  width:15px;
+   width:15px;
   height:15px;
-  background-image: url("https://cdn0.iconfinder.com/data/icons/basic-ui-elements-colored/700/010_x-3-512.png");
+  /* background-image: url("https://cdn0.iconfinder.com/data/icons/basic-ui-elements-colored/700/010_x-3-512.png"); */
   /* background-repeat: no-repeat;
   background-size: 30px;
   background-position: right top;
@@ -11,11 +11,11 @@
 .unchecked {
   width:15px;
   height:15px;
-  background-image: url("http://icons.iconarchive.com/icons/blackvariant/button-ui-requests-1/1024/Acorn-icon.png");
+  /* background-image: url("http://icons.iconarchive.com/icons/blackvariant/button-ui-requests-1/1024/Acorn-icon.png");
   background-repeat: no-repeat;
   background-size: 10px;
   background-position: right top;
-  margin-right:0px;
+  margin-right:0px; */
 }
 
 .hidden {
