added acorn icon, it will change to x icon when checked as completed

--- a/src/components/tasks/TaskItem.css
+++ b/src/components/tasks/TaskItem.css
@@ -1,16 +1,19 @@
-.checked {
+/* .checked {
    width:15px;
   height:15px;
+  margin-left: 10px; */
   /* background-image: url("https://cdn0.iconfinder.com/data/icons/basic-ui-elements-colored/700/010_x-3-512.png"); */
   /* background-repeat: no-repeat;
   background-size: 30px;
   background-position: right top;
   margin-right:10px; */
-}
+/* } */
 
-.unchecked {
+.icon {
   width:15px;
   height:15px;
+  margin-left: 10px;
+  /* image-orientation: right top; */
   /* background-image: url("http://icons.iconarchive.com/icons/blackvariant/button-ui-requests-1/1024/Acorn-icon.png");
   background-repeat: no-repeat;
   background-size: 10px;
