refactored appearance, added avatars

--- a/src/components/events/FriendsEvents.css
+++ b/src/components/events/FriendsEvents.css
@@ -21,7 +21,7 @@
     background-color: cornsilk !important;
     border: 1px solid black !important;
     text-align: center;
-    tfont-style: italic;
+    font-style: italic;
   }
   
   .eventsCardGroup {
