--- a/src/components/messages/Messages.css
+++ b/src/components/messages/Messages.css
@@ -10,6 +10,7 @@
   font-style: italic;
   display: flex !important;
   justify-content: center !important;
+  text-align: center;
 }
 
 .notFriendsMessageCards {
@@ -29,14 +30,18 @@
 }
 
 .userMessageContainer {
-  margin-left: 60%;
-  margin-top: 10px;
-  /* border-radius: 50% !important; */
+  margin-left: 30% !important;
+  margin-top: 10px !important;
 }
 
 .othersMessageContainer {
-  margin-right: 60%;
-  margin-top: 10px;
+  margin-right: 30% !important;
+  margin-top: 10px !important;
+}
+
+.notOthersMessageContainer {
+  margin-right: 30% !important;
+  margin-top: 10px !important;
 }
 
 .messagesForm {
